# brats-reg-elastix

./: .gitignore  README.md  brats-reg-analysis.py  calculate-point-distance.py  fileconfig.py  requirements.txt
landmark-reader/: setup.cfg
landmark-reader/src/landmark_reader/: __init__.py  _reader.py  napari.yaml
results/: result_distances.csv
