[metadata]
name = landmark-reader 
version = 0.0.1
classifiers =
    Framework :: napari

[options]
packages = find:
include_package_data = True
install_requires =
    napari

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    landmark-reader = landmark_reader:napari.yaml
